# ai-agent-memory-demo

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: deploy_dev.yml
agents/: chat_agent.py
db/: vector_db.py
helpers/: css_helper.py
models/: chat_message.py
ui_components/: chat_messages.py  sidebar.py  style.css
ui_components/pages/: chat_page.py  vector_db_page.py
