[project]
name = "ai-agent-memory-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "authlib>=1.5.2",
    "dotenv>=0.9.9",
    "pydantic>=2.11.4",
    "pydantic-ai>=0.1.9",
    "qdrant-client>=1.14.2",
    "streamlit>=1.45.0",
]
